--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -2,6 +2,8 @@ SET(SOURCES screens/ui_Screen1.c
     ui.c
     components/ui_comp_hook.c
     ui_helpers.c
-    images/ui_img_useful_electronics_png.c)
+    images/ui_img_background_png.c
+    images/ui_img_status_png.c
+    images/ui_img_rhomboid_png.c)
 
 add_library(ui ${SOURCES})
