--- a/software/main/CMakeLists.txt
+++ b/software/main/CMakeLists.txt
@@ -6,6 +6,8 @@ file(GLOB_RECURSE GPIO_SOURCES gpio/*.c)
 
 file(GLOB_RECURSE UWB_SOURCES uwb/*.c)
 
+file(GLOB_RECURSE SGP_SOURCES sgp40/*.c)
+
 idf_component_register(SRCS "main.c" 
 						"lvgl_demo_ui.c" 
 						"images/ui_img_useful_electronics_png.c" 
@@ -13,4 +15,5 @@ idf_component_register(SRCS "main.c"
 						${IMAGE_SOURCES} 
 						${DISPLAY_SOURCES}
 						${UWB_SOURCES}
+						${SGP_SOURCES}
                        INCLUDE_DIRS ".")
