--- a/software/managed_components/espressif__esp_lcd_touch_gt911/idf_component.yml
+++ b/software/managed_components/espressif__esp_lcd_touch_gt911/idf_component.yml
@@ -2,12 +2,11 @@ dependencies:
   esp_lcd_touch:
     public: true
     version: ^1.1.0
-  idf:
-    version: '>=4.4.2'
+  idf: '>=4.4.2'
 description: ESP LCD Touch GT911 - touch controller GT911
 repository: git://github.com/espressif/esp-bsp.git
 repository_info:
-  commit_sha: 54e9ba5f17d0f007f5a4073240b5f6c20e099f91
+  commit_sha: 30d2504a679c1cb0d10833f772d97453098b4c08
   path: components/lcd_touch/esp_lcd_touch_gt911
 url: https://github.com/espressif/esp-bsp/tree/master/components/lcd_touch/esp_lcd_touch_gt911
-version: 1.1.1
+version: 1.1.1~1
