--- a/software/managed_components/espressif__esp_lcd_touch_tt21100/idf_component.yml
+++ b/software/managed_components/espressif__esp_lcd_touch_tt21100/idf_component.yml
@@ -2,8 +2,11 @@ dependencies:
   esp_lcd_touch:
     public: true
     version: ^1.1.0
-  idf:
-    version: '>=4.4.2'
+  idf: '>=4.4.2'
 description: ESP LCD Touch TT21100 - touch controller TT21100
+repository: git://github.com/espressif/esp-bsp.git
+repository_info:
+  commit_sha: 30d2504a679c1cb0d10833f772d97453098b4c08
+  path: components/lcd_touch/esp_lcd_touch_tt21100
 url: https://github.com/espressif/esp-bsp/tree/master/components/lcd_touch/esp_lcd_touch_tt21100
-version: 1.1.0
+version: 1.1.0~1
