HDC driver sensor is ongoing

--- a/software/main/CMakeLists.txt
+++ b/software/main/CMakeLists.txt
@@ -8,6 +8,8 @@ file(GLOB_RECURSE UWB_SOURCES uwb/*.c)
 
 file(GLOB_RECURSE SGP_SOURCES sgp40/*.c)
 
+file(GLOB_RECURSE HDC1080_SOURCES hdc1080/*.c)
+
 idf_component_register(SRCS "main.c" 
 						"lvgl_demo_ui.c" 
 						"images/ui_img_useful_electronics_png.c" 
@@ -16,4 +18,5 @@ idf_component_register(SRCS "main.c"
 						${DISPLAY_SOURCES}
 						${UWB_SOURCES}
 						${SGP_SOURCES}
+						${HDC1080_SOURCES}
                        INCLUDE_DIRS ".")
