--- a/software/main/CMakeLists.txt
+++ b/software/main/CMakeLists.txt
@@ -13,6 +13,8 @@ file(GLOB_RECURSE HDC1080_SOURCES hdc1080/*.c)
 idf_component_register(SRCS "main.c" 
 						"lvgl_demo_ui.c" 
 						"images/ui_img_useful_electronics_png.c" 
+						"images/ui_img_air_quality_gauge_png.c" 
+						"images/ui_img_gauge_pointer_png.c" 
 						${GPIO_SOURCES} 
 						${IMAGE_SOURCES} 
 						${DISPLAY_SOURCES}
