Updated air quality string order and added Wifi & MQTT connititon logos to show connection state

--- a/software/main/CMakeLists.txt
+++ b/software/main/CMakeLists.txt
@@ -18,6 +18,10 @@ idf_component_register(SRCS "main.c"
 						"images/ui_img_useful_electronics_png.c" 
 						"images/ui_img_air_quality_gauge_png.c" 
 						"images/ui_img_gauge_pointer_png.c" 
+						"images/ui_img_mqtt_passive_png.c" 
+						"images/ui_img_mqtt_active_png.c" 
+						"images/ui_img_wifi_passive_png.c" 
+						"images/ui_img_wifi_active_png.c" 
 						${GPIO_SOURCES} 
 						${IMAGE_SOURCES} 
 						${DISPLAY_SOURCES}
